# DemoBeaconWhisperer

./: LICENSE  README.md
demo_android_bluetest/: _hh  config.xml  npmFilesToImport.json  package-lock.json  package.json
demo_android_bluetest/www/: index.html
demo_android_bluetest/www/css/: index.css
demo_android_bluetest/www/js/: button.js  crc16.js  index.js  iregion.js  log.js  protocol.js  time.js
demo_android_bluetest/www/js/res/: lzw.js
esp-idf-bindgen/: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
esp-idf-bindgen/.cargo/: config.toml
esp-idf-bindgen/src/: bindings.h  lib.rs  sdkconfig.h
esp32/: CMakeLists.txt  Cargo.toml  _sdkconfig.defaults  build.rs  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp32/src/: main.rs
