[package]
name = "b-key-esp32"
version = "0.1.0"
authors = ["Денис Котляров <denis2005991@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
esp-idf-hal = "0.38.1"
embedded-hal = "0.2.7"
esp32-hal = "0.5.0"

once_cell = "1.15.0"
embedded-io = "0.3.0"

#esp-idf-bindgen = { path = "../esp-idf-bindgen" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"
